@@ -395,7 +395,8 @@ class Database(FileDatabase, qm.common.MutexMixin):
         resource_class_name = self.__GetClassNameFromDomNode(resource_node)
         # Obtain the test class.
         try:
-            resource_class = base.get_resource_class(resource_class_name)
+            resource_class = \
+               base.get_resource_class(resource_class_name, self)
         except KeyError:
             raise UnknownResourceClassError, class_name
         arguments = self.__GetArgumentsFromDomNode(resource_node,
