@@ -1,28 +1,0 @@
-<?xml version='1.0' encoding='ISO-8859-1'?>
-<!DOCTYPE test PUBLIC "-//Software Carpentry//QMTest Test V0.1//EN" "http://www.software-carpentry.com/qm/xml/test.dtd">
-<test>
- <class>command.ShellScriptTest</class>
- <argument name='exit_code'>
-  <integer>0</integer>
- </argument>
- <argument name='stdin'>
-  <text/>
- </argument>
- <argument name='environment'>
-  <set/>
- </argument>
- <argument name='script'>
-  <text># Make sure the "PATH" environment variable is set correctly.
-test -n "${QMV_path}"
-</text>
- </argument>
- <argument name='stderr'>
-  <text/>
- </argument>
- <argument name='arguments'>
-  <set/>
- </argument>
- <argument name='stdout'>
-  <text/>
- </argument>
-</test>
