@@ -1,14 +1,0 @@
-<?xml version='1.0' encoding='ISO-8859-1'?>
-<!DOCTYPE test PUBLIC "-//Software Carpentry//QMTest Test V0.1//EN" "http://www.software-carpentry.com/qm/xml/test.dtd">
-<test>
- <class>python.ExecTest</class>
- <argument name='source'>
-  <text>from qm.test.base import expand_ids
-ids_in_suite = expand_ids(['unit.test.test_suite1'])[0]
-</text>
- </argument>
- <argument name='expression'>
-  <text>len(ids_in_suite) == 3
-</text>
- </argument>
-</test>
